--- a/index.html
+++ b/index.html
@@ -59,12 +59,18 @@
                 </div>
             </div>
 
-            <div id="importBTN" class="controlBTN">IMPORT</div>
+            <div class="controlBTN" style="cursor: pointer;">
+                IMPORT
+                <input id="importBTN" type="file" accept="application/JSON" style="opacity: 0; cursor: pointer; position: absolute; top: 0; left: 0; bottom: 0; right: 0; width: 100%; height:100%;" />
+            </div>
 
 
             <div id="addToDo" class="controlBTN">NEW TODO</div>
 
             <div id="exportBTN" class="controlBTN" onclick="download('MyToDos.txt', ':)', 'text/plain')">Export</div>
+
+
+
 
 
         </div>
