--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 
             <div class="controlBTN" style="cursor: pointer;">
                 IMPORT
-                <input id="importBTN" onchange='onChooseFile(event, onFileLoad.bind(this, "contents"))' type="file" accept="application/JSON" style="opacity: 0; cursor: pointer; position: absolute; top: 0; left: 0; bottom: 0; right: 0; width: 100%; height:100%;" />
+                <input id="importBTN" onchange='onChooseFile(event)' type="file" accept="application/JSON" style="opacity: 0; cursor: pointer; position: absolute; top: 0; left: 0; bottom: 0; right: 0; width: 100%; height:100%;" />
             </div>
 
             <div id="addToDo" class="controlBTN">NEW TODO</div>
@@ -70,7 +70,7 @@
 
 
 
-
+            <p id="contents"></p>
 
         </div>
 
@@ -79,7 +79,6 @@
     </main>
 
     <script type="module" src="../scripts/script.js"></script>
-
     <script src="../scripts/fileIO.js"></script>
 </body>
 
