--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 
             <div id="addToDo" class="controlBTN">NEW TODO</div>
 
-            <div id="exportBTN" class="controlBTN" onclick="download('MyToDos.txt', ':)', 'text/plain')">Export</div>
+            <div id="exportBTN" class="controlBTN" onclick="download('text/plain')">Export</div>
 
 
 
