Letre hoztam egy test modalt

--- a/index.html
+++ b/index.html
@@ -74,8 +74,33 @@
 
         </div>
 
+        <!-- MODAL Test : Magat a FORM-ot beletettem egy tablazatba bar biztos van ra jobb megoldas, egyenlore ez jutott eszembe by: Mate -->
 
+        <div class="modal-new">
+            <div class="modal-box">
+                <h1> Add new </h1>
+                <form id="modal-form" action="#">
+                    <table id="modal-table">
+                        <tr>
+                            <td>Feladat neve</td>
+                            <td><input id="modal-input" type="text"></td>
+                        </tr>
+                        <tr>
+                            <td>Leiras</td>
+                            <td><input id="modal-input" type="text"></td>
+                        </tr>
+                        <tr>
+                            <td>Hatarido</td>
+                            <td><input id="modal-input" type="date" min="2022-01-01" max="2100-12-31"></td>
+                        </tr>
+                    </table>
+                </form>
+                <button id="modal-btn">Letrehozas</button>
+                <button class="modalCancel">Cancel</button>
+            </div>
+        </div>
 
+        <!-- MODAL END -->
     </main>
 
     <script type="module" src="../scripts/script.js"></script>
