--- a/index.html
+++ b/index.html
@@ -78,24 +78,18 @@
 
         <div class="modal-new">
             <div class="modal-box">
-                <h1> Add new </h1>
+                <h1> Create New </h1>
                 <form id="modal-form" action="#">
-                    <table id="modal-table">
-                        <tr>
-                            <td>Feladat neve</td>
-                            <td><input id="modal-input" type="text"></td>
-                        </tr>
-                        <tr>
-                            <td>Leiras</td>
-                            <td><input id="modal-input" type="text"></td>
-                        </tr>
-                        <tr>
-                            <td>Hatarido</td>
-                            <td><input id="modal-input" type="date" min="2022-01-01" max="2100-12-31"></td>
-                        </tr>
-                    </table>
+                    <label for="todoName">
+                        Name
+                    </label>
+                    <input type="text" name="todoName" id="todoName">
+                    <label for="todoDescription">Description</label>
+                    <textarea name="todoDescription" id="todoDescription" cols="10" rows="3"></textarea>
+                    <label for="todoDeadline">Deadline</label>
+                    <input type="date" name="todoDeadline" id="todoDeadline" value="2022-02-01" min="2022-01-01" max="2100-12-31">
                 </form>
-                <button id="modal-btn">Letrehozas</button>
+                <button id="modal-btn">Create</button>
                 <button class="modalCancel">Cancel</button>
             </div>
         </div>
